feat(#26): add edges endpoint
