# pkg/controlplane/implementation/repository/workload/models.go
@@ -1,7 +1,9 @@
 package workload
 
 import (
+	"database/sql"
 	"encoding/json"
+	"fmt"
 	"time"
 
 	"github.com/wernsiet/morchy/pkg/controlplane/domain/workload"
@@ -15,16 +17,18 @@ type dbWorkload struct {
 }
 
 type dbWorkloadSpec struct {
-	ID      string
-	Image   string
-	CPU     uint
-	RAM     uint
-	Command []string
-	Env     map[string]string
+	ID            string
+	Image         string
+	CPU           uint
+	RAM           uint
+	Command       []string
+	Env           map[string]string
+	ContainerPort sql.NullInt32
+	HostPort      sql.NullInt32
 }
 
 func (w *dbWorkload) ToDomain() *workload.Workload {
-	return &workload.Workload{
+	wl := workload.Workload{
 		ID:     w.ID,
 		Status: workload.WorkloadStatus(w.Status),
 		Spec: workload.WorkloadSpec{
@@ -36,6 +40,15 @@ func (w *dbWorkload) ToDomain() *workload.Workload {
 			Env:     w.Spec.Env,
 		},
 	}
+	if w.Spec.ContainerPort.Valid {
+		containerPort := int(w.Spec.ContainerPort.Int32)
+		wl.Spec.ContainerPort = &containerPort
+	}
+	if w.Spec.HostPort.Valid {
+		hostPort := int(w.Spec.HostPort.Int32)
+		wl.Spec.HostPort = &hostPort
+	}
+	return &wl
 }
 
 type dbLease struct {
@@ -72,5 +85,18 @@ func (e *dbEvent) ToDomain() *workload.Event {
 		Payload:    e.Payload,
 		ProducedAt: e.ProducedAt,
 		CreatedAt:  e.CreatedAt,
+	}
+}
+
+type dbEdge struct {
+	WorkloadID string
+	NodeID     string
+	HostPort   int
+}
+
+func (e *dbEdge) ToDomain() *workload.Edge {
+	return &workload.Edge{
+		UpstreamAddress: fmt.Sprintf("localhost:%d", e.HostPort),
+		ProxyPath:       fmt.Sprintf("/%s", e.WorkloadID),
 	}
 }
