# pkg/mctl/generated/controlplane.go/model_jsonformatter_edge_response.go
@@ -1,0 +1,12 @@
+/*
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type JsonformatterEdgeResponse struct {
+	ProxyPath string `json:"proxy_path,omitempty"`
+	UpstreamAddress string `json:"upstream_address,omitempty"`
+}
