# pkg/runtime/types.go
@@ -14,6 +14,12 @@ type ResourceLimits struct {
 	RAM uint `json:"ram"`
 }
 
+type NetConfig struct {
+	ContainerPort int    `json:"container_port"`
+	HostPort      int    `json:"host_port"`
+	Protocol      string `json:"protocol"`
+}
+
 type Container struct {
 	Name      string            `json:"name"`
 	Image     string            `json:"image"`
@@ -21,6 +27,7 @@ type Container struct {
 	Env       []EnvVar          `json:"env"`
 	Resources ResourceLimits    `json:"resources"`
 	Labels    map[string]string `json:"labels"`
+	NetConfig *NetConfig        `json:"net_config"`
 }
 
 type ContainerBrief struct {
